Jogo da velha finalizado

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <h1>Jogo da Velha</h1>
 
     <div class="structure">
-        <div data-box="a1" class="box b r"></div>
-        <div data-box="a2" class="box b r"></div>
-        <div data-box="a3" class="box b"></div>
+        <div id="a1" data-box="" class="box b r"></div>
+        <div id="a2" data-box="" class="box b r"></div>
+        <div id="a3" data-box="" class="box b"></div>
 
-        <div data-box="b1" class="box b r"></div>
-        <div data-box="b2" class="box b r"></div>
-        <div data-box="b3" class="box b"></div>
+        <div id="b1" data-box="" class="box b r"></div>
+        <div id="b2" data-box="" class="box b r"></div>
+        <div id="b3" data-box="" class="box b"></div>
         
-        <div data-box="c1" class="box r"></div>
-        <div data-box="c2" class="box r"></div>
-        <div data-box="c3" class="box"></div>
+        <div id="c1" data-box="" class="box r"></div>
+        <div id="c2" data-box="" class="box r"></div>
+        <div id="c3" data-box="" class="box"></div>
     </div>
 
     <div class="info">
@@ -31,8 +31,8 @@
             <div class="info-player"></div>
         </div>
         <div class="info-item">
-            <div class="info-title"> Vencedor:</div>
-            <div class="info-winner"></div>
+            <div class="info-title">Vencedor:</div>
+            <div class="info-winner">?</div>
         </div>
     </div>
 
