Alterando alguns detalhes no CSS

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Jogo da Velha</h1>
 
-    <div class="structure">
+    <div class="structure structureH">
         <div id="a1" data-box="" class="box b r"></div>
         <div id="a2" data-box="" class="box b r"></div>
         <div id="a3" data-box="" class="box b"></div>
